src/unit_tests/TypeChecker/fail/attr-err-init.cl
class Main {
    x : String <- 5 + "ads";
    main() : Int {
        {
            1;
        }
    };
};